fixed bug in PVetoReconstruction clustering for data, making sure that cluster time is the average time

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -35,6 +35,7 @@ ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 
 [RECOCLUSTER]
+ClusterAlgo			1 #0 = virtual clusterisation (but it won't work atm (23/9/22)), 1 = new cannibalistic clusterisation
 #ClusterDeltaTimeMax            5.
 ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
@@ -53,7 +54,7 @@ SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
-CalibrationFile	    1
+CalibrationFile	    2 #Beth 26/9/22 1 = point by point T0s from cables & detector effects for 2020 data Calibration/PVeto_TimeCalibration_DerivativeDigitizer2020.txt, 2 = hardcoded cable/detector effects averaged over all channels which use the same cables
 #Common_t0 34.84
 #Common_t0MC -10.17
 #t0_0 	  -2.15474
