--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -19,9 +19,9 @@ VoltageBin	0.000244
 [RECO]
 NumberOfSamplesPedestal		50
 #AmpThrLow is the minimum peak height allowed for a hit
-AmplThrLow			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
+AmplThrLow			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
-AmplThrHig			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
+AmplThrHig			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 UsePulseProcessing		0
 SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
@@ -50,11 +50,11 @@ ClusterAlgo			1 #0 = virtual clusterisation (but it won't work atm (23/9/22)), 1
 [Output]
 Hits            1
 Clusters        1
-SaveAnalogs	0
+SaveAnalogs	1
 TotalAnalogs	100
 
 [TimeCalibration]
-CalibrationFile		1
+CalibrationFile		2  #Beth 26/9/22 1 = point by point T0s from cables & detector effects for 2020 data Calibration/PVeto_TimeCalibration_DerivativeDigitizer2020.txt, 2 = hardcoded cable/detector effects averaged over all channels which use the same cables
 #Common_t0  37.24
 #t0_0 -2.35925
 #t0_1 -2.30022
