PadmeReco: fixed configuration for 2022, removed 202209 dir

--- a/PadmeReco/config.template/2022/PadmeReconstruction.cfg
+++ b/PadmeReco/config.template/2022/PadmeReconstruction.cfg
@@ -1,6 +1,7 @@
 [RECOALGORITHMS]
 ECal    1
 SAC     0
+ETag    1
 PVeto	0
 EVeto   0
 HEPVeto 1
@@ -11,6 +12,7 @@ LeadGlass 1
 [RECOOutput]
 ECal    1
 SAC     0
+ETag    1
 PVeto	0
 EVeto   0
 HEPVeto 1
@@ -22,7 +24,7 @@ LeadGlass 1
 Pedestals   0
 Reconstruct 1
 #Call the Analysis method in the reconstructions for histogramming
-Monitor     1
+Monitor     0
 #------------------
 Cosmics     0
 Debug       0
@@ -30,9 +32,10 @@ Debug       0
 [RECOCONFIG]
 ECal      config/2022/ECal_Calib6.cfg
 SAC       config/2022/SAC.cfg
+ETag      config/2022/ETag.cfg
 PVeto	  config/2022/PVeto.cfg
 EVeto     config/2022/EVeto.cfg
 HEPVeto   config/2022/HEPVeto.cfg
 TPix      config/2022/TPix.cfg
-Target    config/2022/Target_tuning2020.cfg
+Target    config/2022/Target.cfg
 LeadGlass config/2022/LeadGlass.cfg
