Need to add AnalysisBase lib (IMHO) after Analyzers lib to allow link for those tools used by the Analyzers only.

--- a/UserAnalysis/GNUmakefile
+++ b/UserAnalysis/GNUmakefile
@@ -20,6 +20,7 @@ LIBS += $(addprefix -L,$(addsuffix /lib,$(SUBDIRS))) $(addprefix -l,$(addsuffix 
 LIBS += -Llib -lPadmeAnalysis$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 LIBS += -L$(PADME)/UserAnalysis/AnalysisBase/lib -lAnalysisBase$(STATIC) -L$(PADME)/UserAnalysis/Analyzers/lib -lAnalyzers$(STATIC)
+LIBS += -L$(PADME)/UserAnalysis/AnalysisBase/lib -lAnalysisBase$(STATIC) 
 
 .PHONY: clean cleansub cleanbin env $(ALLTARGETDIRS)
 
