Improved naming of Time Calibration variables and added cable lengths for EVeto

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -28,7 +28,7 @@ DigitizationTimeWindowForMC    17.0
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation		1
 TailCorrection			0
-TimeCorrection			1
+ApplyTimeCalibration		1
 DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
@@ -54,7 +54,7 @@ SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
-CalibrationFile	    2 #Beth 26/9/22 1 = point by point T0s from cables & detector effects for 2020 data Calibration/PVeto_TimeCalibration_DerivativeDigitizer2020.txt, 2 = hardcoded cable/detector effects averaged over all channels which use the same cables
+TimeCalibrationMethod    2 #Beth 26/9/22 1 = point by point T0s from cables & detector effects for 2020 data Calibration/PVeto_TimeCalibration_DerivativeDigitizer2020.txt, 2 = hardcoded cable/detector effects averaged over all channels which use the same cables
 #Common_t0 34.84
 #Common_t0MC -10.17
 #t0_0 	  -2.15474
