fixed bug in PVetoReconstruction clustering for data, making sure that cluster time is the average time

--- a/PadmeReco/config/PadmeReconstruction.cfg
+++ b/PadmeReco/config/PadmeReconstruction.cfg
@@ -1,20 +1,24 @@
 [RECOALGORITHMS]
 ECal    0
 SAC     0
+ETag    0
 PVeto	1
 EVeto   1
 HEPVeto 0
 TPix    0
 Target  1
+LeadGlass 0
 
 [RECOOutput]
 ECal    0
 SAC     0
+ETag    0
 PVeto	1
 EVeto   1
 HEPVeto 0
 TPix    0
 Target  1
+LeadGlass 0
 
 [RUNNINGMODE]
 Pedestals   0
@@ -23,13 +27,15 @@ Reconstruct 1
 Monitor     0
 #------------------
 Cosmics     0
-Debug       1
+Debug       0
 
 [RECOCONFIG]
-ECal    config/ECal.cfg
-SAC     config/SAC.cfg
-PVeto	config/PVeto.cfg
-EVeto   config/EVeto.cfg
-HEPVeto config/HEPVeto.cfg
-TPix    config/TPix.cfg
-Target  config/Target.cfg
+ECal      config/ECal_Calib6.cfg
+SAC       config/SAC.cfg
+ETag      config/ETag.cfg
+PVeto	  config/PVeto.cfg
+EVeto     config/EVeto.cfg
+HEPVeto   config/HEPVeto.cfg
+TPix      config/TPix.cfg
+Target    config/Target.cfg
+LeadGlass config/LeadGlass.cfg
