fixed bug in PVetoReconstruction clustering for data, making sure that cluster time is the average time

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -27,7 +27,7 @@ SigmaNoiseForMC			0.4
 DigitizationTimeWindowForMC	17.0
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation  	      	1
-TailCorrection			0
+TailCorrection			1
 ApplyTimeCalibration		1
 DerivPoints			15
 PeakSearchWidth			5
@@ -35,7 +35,7 @@ ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 
 [RECOCLUSTER]
-ClusterAlgo			1 #0 = virtual clusterisation (but it won't work atm (23/9/22)), 1 = new cannibalistic clusterisation
+ClusterAlgo			0 #0 = virtual clusterisation, 1 = new cannibalistic clusterisation
 #ClusterDeltaTimeMax            5.
 ClusterDeltaTimeMax            	4.
 ClusterDeltaCellMax            	2
@@ -48,9 +48,10 @@ ClusterTLowForHit              	-300.#changed from -100 Beth 28/4/22
 ClusterTHighForHit              300.
 
 [Output]
+DigiFileOut	EVetoRecoAnDeriv.root
 Hits            1
 Clusters        1
-SaveAnalogs	0
+SaveAnalogs	1
 TotalAnalogs	100
 
 [TimeCalibration]
