--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -27,7 +27,7 @@ SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
 #Following variables added by Beth 21/9/22, copied from EVeto.cfg edited 7/4/22:
 ChannelEqualisation		1
-TailCorrection			0
+TailCorrection			1
 ApplyTimeCalibration		1
 DerivPoints			15
 PeakSearchWidth			5
@@ -35,6 +35,7 @@ ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 
 [RECOCLUSTER]
+ClusterAlgo			0 #0 = virtual clusterisation, 1 = new cannibalistic clusterisation
 #ClusterDeltaTimeMax            5.
 ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
@@ -45,9 +46,9 @@ ClusterEnergyThresholdForSeed  0.1
 ClusterTLowForHit              -300.#changed from -100 Beth 28/4/22
 #ClusterTHighForHit              180.
 ClusterTHighForHit              300.
-ClusterAlgo			1 #0 = virtual clusterisation (but it won't work atm (23/9/22)), 1 = new cannibalistic clusterisation
 
 [Output]
+DigiFileOut	PVetoRecoAnDeriv.root
 Hits            1
 Clusters        1
 SaveAnalogs	1
