most up to date PadmeReco

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -33,6 +33,8 @@ DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
+#Beth 4/2/22 added, simulate broken channels (52, 53, 54, 55) in EVeto MC events.
+MCSimBrokenChas			1
 
 [RECOCLUSTER]
 ClusterAlgo			1 #0 = virtual clusterisation, 1 = new cannibalistic clusterisation
