--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -17,7 +17,7 @@ InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
-NumberOfSamplesPedestal		50
+NumberOfSamplesPedestal		50#Beth 6/2/2023 - changed from 50 to 150 to bring inline with EVeto
 #AmpThrLow is the minimum peak height allowed for a hit
 AmplThrLow			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
