--- a/PadmeReco/config/PadmeReconstruction.cfg
+++ b/PadmeReco/config/PadmeReconstruction.cfg
@@ -1,5 +1,5 @@
 [RECOALGORITHMS]
-ECal    0
+ECal    1
 SAC     1
 ETag    0
 PVeto	1
@@ -10,7 +10,7 @@ Target  1
 LeadGlass 0
 
 [RECOOutput]
-ECal    0
+ECal    1
 SAC     1
 ETag    0
 PVeto	1
@@ -24,7 +24,7 @@ LeadGlass 0
 Pedestals   0
 Reconstruct 1
 #Call the Analysis method in the reconstructions for histogramming
-Monitor     0
+Monitor     1
 #------------------
 Cosmics     0
 Debug       0
@@ -37,5 +37,5 @@ PVeto	  config/PVeto.cfg
 EVeto     config/EVeto.cfg
 HEPVeto   config/HEPVeto.cfg
 TPix      config/TPix.cfg
-Target    config/Target.cfg #config/Target_tuning2020.cfg
+Target    config/Target_tuning2020.cfg
 LeadGlass config/LeadGlass.cfg
