changed DigiizationTimeWindowForMC in Vetoes

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -24,7 +24,7 @@ AmplThrLow    	  	        8
 AmplThrHigh    	   	   	8
 UsePulseProcessing		0
 SigmaNoiseForMC			0.4
-DigitizationTimeWindowForMC	17.0
+DigitizationTimeWindowForMC     10 #17.0 #Beth 8/2/23 changed from 17 to 10 to reflect improvements in data reconstruction
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation  	      	1
 TailCorrection			1
