changed DigiizationTimeWindowForMC in Vetoes

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -23,7 +23,7 @@ AmplThrLow			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - p
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
 AmplThrHig			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 UsePulseProcessing		0
-SigmaNoiseForMC                 0.01
+SigmaNoiseForMC                 0.24 #Beth tuned vs 2020 data
 DigitizationTimeWindowForMC     10 #17.0 #Beth 8/2/23 changed from 17 to 10 to reflect improvements in data reconstruction
 #Following variables added by Beth 21/9/22, copied from EVeto.cfg edited 7/4/22:
 ChannelEqualisation		1
