--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -7,3 +7,16 @@ Triggers ALL
 
 [ECAL]
 Temp_File config/ECal_Temperature_01.dat
+
+[ANALYSES]
+ECalCalib				0
+MCTruth					0
+NPoT					0
+IsGGAnalysis				0
+BhabhaAnalysis				0
+BremsstrahlungAnalysis			0
+ReversedFieldBremsstrahlungAnalysis	0
+T0sAnalysis				1
+
+[T0sAnalysis]
+SwimBrem	0
