--- a/PadmeReco/config.template/PadmeReconstruction.cfg
+++ b/PadmeReco/config.template/PadmeReconstruction.cfg
@@ -7,6 +7,8 @@ EVeto   1
 HEPVeto 1
 TPix    0
 Target  1
+ECalML  1
+LeadGlass 0
 
 [RECOOutput]
 ECal    1
@@ -17,6 +19,9 @@ EVeto   1
 HEPVeto 1
 TPix    0
 Target  1
+ECalML  1
+LeadGlass 0
+
 
 [RUNNINGMODE]
 Pedestals   0
@@ -36,3 +41,4 @@ EVeto   config/EVeto.cfg
 HEPVeto config/HEPVeto.cfg
 TPix    config/TPix.cfg
 Target  config/Target.cfg
+ECalML  config/ECalML.cfg
