updated analysis to make it easier to turn on and off different analysis

--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -11,12 +11,16 @@ Temp_File config/ECal_Temperature_01.dat
 [ANALYSES]
 ECalCalib				0
 MCTruth					0
-NPoT					0
-IsGGAnalysis				0
-BhabhaAnalysis				0
+NPoT					1
+IsGGAnalysis				1
+BhabhaAnalysis				1
 BremsstrahlungAnalysis			0
 ReversedFieldBremsstrahlungAnalysis	0
-T0sAnalysis				1
+T0sAnalysis				0
+HitCharacteristics			1
 
 [T0sAnalysis]
 SwimBrem	0
+
+[BhabhaAnalysis]
+SwimBhabha	1
