most up to date PadmeReco

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -23,7 +23,7 @@ AmplThrLow			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - p
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
 AmplThrHig			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 UsePulseProcessing		0
-SigmaNoiseForMC                 0.24 #Beth tuned vs 2020 data
+SigmaNoiseForMC                 0.3 #Beth tuned vs 2020 data
 DigitizationTimeWindowForMC     10 #17.0 #Beth 8/2/23 changed from 17 to 10 to reflect improvements in data reconstruction
 #Following variables added by Beth 21/9/22, copied from EVeto.cfg edited 7/4/22:
 ChannelEqualisation		1
@@ -35,6 +35,7 @@ ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 MCEnergyScale			0.8636 #Beth 7/2/23 added to put MC energy peak in the same place as data
 MCEnergyThr			0.366 #8 derivative digitizer counts TSpec threshold for 35 count MPV assuming 1.6 MeV per MIP
+ClusterHitEnThr			0.9 #Beth 9/2/23 added: 900 keV, where data and MC start to look vaguely like each other
 
 [RECOCLUSTER]
 ClusterAlgo			1 #0 = virtual clusterisation, 1 = new cannibalistic clusterisation
