--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -23,7 +23,7 @@ AmplThrLow    	  	        8
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
 AmplThrHigh    	   	   	8
 UsePulseProcessing		0
-SigmaNoiseForMC			0.4
+SigmaNoiseForMC			0.3
 DigitizationTimeWindowForMC     10 #17.0 #Beth 8/2/23 changed from 17 to 10 to reflect improvements in data reconstruction
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation  	      	1
@@ -35,6 +35,7 @@ ZeroSuppression			5#Beth 21/3/22 added
 DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 #Beth 4/2/22 added, simulate broken channels (52, 53, 54, 55) in EVeto MC events.
 MCSimBrokenChas			1
+ClusterHitEnThr			0.9 #Beth 9/2/23 added: taken from PVeto, 900 keV, where data and MC start to look vaguely like each other
 
 [RECOCLUSTER]
 ClusterAlgo			1 #0 = virtual clusterisation, 1 = new cannibalistic clusterisation
