PadmeReco3: fixed makefile, added TrigeTimeSvc

--- a/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
+++ b/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
@@ -20,6 +20,13 @@ TPix    0
 Target  1
 LeadGlass 1
 
+[RECOHisto]
+HistoFile HistoFile.root
+Verbose 1
+
+[RECOTrigTime]
+Verbose 1
+
 [RUNNINGMODE]
 Pedestals   0
 Reconstruct 1
