PadmeReco3: added ETagDigitizer

--- a/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
+++ b/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
@@ -4,7 +4,7 @@ SAC     0
 ETag    1
 PVeto	0
 EVeto   0
-HEPVeto 1
+HEPVeto 0
 TPix    0
 Target  1
 LeadGlass 1
@@ -15,7 +15,7 @@ SAC     0
 ETag    1
 PVeto	0
 EVeto   0
-HEPVeto 1
+HEPVeto 0
 TPix    0
 Target  1
 LeadGlass 1
@@ -27,7 +27,13 @@ Verbose 1
 [RECOTrigTime]
 Verbose 1
 
+[RECORunCondition]
+Verbose 1
+
 [RUNNINGMODE]
+#RecoInput MonteCarlo
+RecoInput RawData
+#RecoInput Reprocessing
 Pedestals   0
 Reconstruct 1
 #Call the Analysis method in the reconstructions for histogramming
