--- a/PadmeReco3/GNUmakefile
+++ b/PadmeReco3/GNUmakefile
@@ -2,7 +2,8 @@
 
 NAME := PadmeReco
 
-SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix ETag LeadGlass
+#SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix ETag LeadGlass
+SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC ETag LeadGlass
 #ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay Service
 ALLTARGETDIRS := $(SUBDIRS) RecoBase
 
