--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -9,15 +9,16 @@ Triggers ALL
 Temp_File config/ECal_Temperature_01.dat
 
 [ANALYSES]
-ECalCalib				0
+ECalCalib				1
 MCTruth					1
 NPoT					1
-IsGGAnalysis				0
+IsGGAnalysis				1
 BhabhaAnalysis				1
-BremsstrahlungAnalysis			0
-ReversedFieldBremsstrahlungAnalysis	0
-T0sAnalysis				0
-HitCharacteristics			0
+BremsstrahlungAnalysis			1
+ReversedFieldBremsstrahlungAnalysis	1
+T0sAnalysis				1
+HitCharacteristics			1
+KinematicsBhabha			1
 
 [T0sAnalysis]
 SwimBrem	1
