--- a/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
+++ b/PadmeReco3/config.template/2022/PadmeReconstruction.cfg
@@ -44,7 +44,8 @@ Cosmics     0
 Debug       0
 
 [RECOCONFIG]
-ECal      config/2022/ECal_Calib6.cfg
+#ECal      config/2022/ECal_Calib6.cfg
+ECal      config/2022/ECal.cfg
 SAC       config/2022/SAC.cfg
 ETag      config/2022/ETag.cfg
 PVeto	  config/2022/PVeto.cfg
