PadmeReco3: added LeadGlass to new reconstruction schema

--- a/PadmeReco3/config.template/2022/ECal.cfg
+++ b/PadmeReco3/config.template/2022/ECal.cfg
@@ -35,15 +35,23 @@ VoltageBin	0.000244
 
 [Output]
 # Define debug output level
-Verbose       4
+Verbose       1
 # Enable/Disable output of reconstructed entities
 WriteHits     1
 WriteClusters 1
 
 [RECO]
 # Number of samples to use (avoid using bad samples at the end of the waveform)
-GoodSamples 1000
+GoodSamples 994
 # Number of samples to use to compute the pedestal
 PedestalSamples 100
+# RMS thrshold for a pedestal to be considered pathological
+PedestalRMSThreshold 5.
 # Threshold for RMS-based Zero Suppression: waveform with RMS<10 will not be analyzed
-ZeroSupRMSThreshold 10.
+ZeroSupRMSThreshold 5.
+# File containing ECal waveform template
+TemplateFileName config/2022/ECalTemplate.dat
+# Constant fraction parameters
+ConstantFractionRatio 0.6
+ConstantFractionShift 5
+ConstantFractionThreshold 0.
