--- a/PadmeReco3/config.template/2022/LeadGlass.cfg
+++ b/PadmeReco3/config.template/2022/LeadGlass.cfg
@@ -16,6 +16,12 @@ PedestalSamples    100
 SignalSamplesStart 200
 SignalSamplesEnd   600
 
-ChargeToNPoTs 0.239
+# Convert Charge in pC to Energy in MeV (Energy = Charge * ChargeToEnergy)
+ChargeToEnergy 1261.734
 
+# Threshold (in ADC counts) to define bunch length
 BunchLengthThreshold 50.
+
+[Output]
+Verbose   1
+WriteHits 1
