--- a/PadmeReco3/GNUmakefile
+++ b/PadmeReco3/GNUmakefile
@@ -37,13 +37,17 @@ LIBS += -Llib -lPadmeReco$(STATIC)
 .PHONY: clean cleansub cleanbin env $(ALLTARGETDIRS)
 
 #all: PadmeReco PadmeEventDisplay
-all: PadmeReco WaveformAnalysis
+all: PadmeReco WaveformAnalysis TimeAnalysis
 
 PadmeReco: PadmeReco.cc makesub
 	@echo "Compiling $< ..."
 	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
 
 WaveformAnalysis: WaveformAnalysis.cc makesub
+	@echo "Compiling $< ..."
+	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
+
+TimeAnalysis: TimeAnalysis.cc makesub
 	@echo "Compiling $< ..."
 	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
 
