PadmeMC: finalized LeadGlass persistency, cleaned up ETag configuration, updated vis.mac.example

--- a/PadmeMC/vis.mac.example
+++ b/PadmeMC/vis.mac.example
@@ -47,24 +47,6 @@
 #/analysis/SaveSAC   false
 #/analysis/SaveVeto  false
 
-# Enable IO for single detectors
-#/output/EnableDetectorIO Target:D
-#/output/EnableDetectorIO PVeto:HD
-#/output/EnableDetectorIO EVeto:HD
-#/output/EnableDetectorIO HEPVeto:HD
-#/output/EnableDetectorIO ECal:D
-#/output/EnableDetectorIO SAC:D
-#/output/EnableDetectorIO TPix:D
-
-# Disable IO for single detectors
-#/output/DisableDetectorIO Target
-#/output/DisableDetectorIO PVeto
-#/output/DisableDetectorIO EVeto
-#/output/DisableDetectorIO HEPVeto
-#/output/DisableDetectorIO ECal
-#/output/DisableDetectorIO SAC
-#/output/DisableDetectorIO TPix
-
 # Detector settings
 
 #/Detector/VerboseLevel 0
@@ -82,6 +64,8 @@
 #/Detector/EnableSubDetector HEPVeto
 #/Detector/EnableSubDetector TDump
 #/Detector/EnableSubDetector TPix
+#/Detector/EnableSubDetector ETag
+#/Detector/EnableSubDetector LeadGlass
 
 #/Detector/EnableStructure Magnet
 #/Detector/EnableStructure Chamber
@@ -95,6 +79,8 @@
 #/Detector/DisableSubDetector HEPVeto
 #/Detector/DisableSubDetector TDump
 #/Detector/DisableSubDetector TPix
+#/Detector/DisableSubDetector ETag
+#/Detector/DisableSubDetector LeadGlass
 
 #/Detector/DisableStructure Magnet
 #/Detector/DisableStructure Chamber
@@ -198,11 +184,43 @@
 #/Detector/TPix/NColumns 6
 #/Detector/TPix/DistanceToCorner 29.73 cm
 
+#/Detector/ETag/VerboseLevel 0
+#/Detector/ETag/FrontFaceZ 237.236 cm
+
+#/Detector/LeadGlass/VerboseLevel 0
+#/Detector/LeadGlass/FullSimulation true
+#/Detector/LeadGlass/FrontFaceZ 310. cm
+
+# IO initialization must be done after detector configuration
+# This is mostly to use the correrct VerboseLevel
+
+# Enable IO for single detectors
+#/output/EnableDetectorIO Target:D
+#/output/EnableDetectorIO PVeto:HD
+#/output/EnableDetectorIO EVeto:HD
+#/output/EnableDetectorIO HEPVeto:HD
+#/output/EnableDetectorIO ECal:D
+#/output/EnableDetectorIO SAC:D
+#/output/EnableDetectorIO TPix:D
+#/output/EnableDetectorIO ETag:HD
+#/output/EnableDetectorIO LeadGlasss:D
+
+# Disable IO for single detectors
+#/output/DisableDetectorIO Target
+#/output/DisableDetectorIO PVeto
+#/output/DisableDetectorIO EVeto
+#/output/DisableDetectorIO HEPVeto
+#/output/DisableDetectorIO ECal
+#/output/DisableDetectorIO SAC
+#/output/DisableDetectorIO TPix
+#/output/DisableDetectorIO ETag
+#/output/DisableDetectorIO LeadGlass
+
 # Create detectors and initialize run
 /run/initialize
 
-# Initial beam setup for each year is done at initialization
-# All beam customizations must be done after it
+# Initial beam setup for each year is done at run initialization
+# So all beam customizations must be done after the run initialization is done
 
 # Primary positrons setup (default PADMEMC configuration)
 #/beam/n_e+_per_bunch 25000
@@ -275,6 +293,8 @@
 
 # Calibration run setup: single 50MeV photon pointing to a spot on ECal front face
 #/beam/calibration true
+#/beam/calib_detector ECal
+#/beam/calib_particle gamma
 #/beam/calib_energy 50. MeV
 #/beam/calib_x 14. cm
 #/beam/calib_y 14. cm
