--- a/PADME_Sensitivity/input.conf
+++ b/PADME_Sensitivity/input.conf
@@ -2,12 +2,12 @@
 # Step in log coupling
 DeltaLogCoupling= 0.1
 # Number of toys to run. Give 2 numbers in case you run for expectation
-NbToys= 500 500
+NbToys= 500
 # Channels to use
 UseEE= 1
 UseMuMu= 0
 # RunType can be: 0 (a lot of debuging), 1 (standard exclusion), 2 (toys of toys for expected band)
-RunType= 2
+RunType= 1
 # StatisticsType can be: 0 (L_{S+B}/L_{B}, Tevatron), 1 (\tilde{q}_mu, LHC), 2 (L_{S+B}, CL_{SB})
 StatisticsType= 1
 # Pseudo-experiment politics: 0 (toss everything: pot, bkg etc), 1 (fix pot and bkg and fit the others)
@@ -16,7 +16,7 @@ TossingPolitics= 1
 ConfLevel= 0.90
 # mass points. To put many, copy line and change value.
 #MARCO-> "none" PER SCANNARE SU TUTTE LE MASSE, DA CAPIRE SE è GIUSTO FARE COSì
-MassPoints= none
+#MassPoints= 411
 #output.log file name
 OutputLog= minimization.log
 
