PadmeReco: added ECal_Calib7 and small fix in ECalReconstruction

--- a/PadmeReco/config.template/2022/PadmeReconstruction.cfg
+++ b/PadmeReco/config.template/2022/PadmeReconstruction.cfg
@@ -30,7 +30,8 @@ Cosmics     0
 Debug       0
 
 [RECOCONFIG]
-ECal      config/2022/ECal_Calib6.cfg
+#ECal      config/2022/ECal_Calib6.cfg
+ECal      config/2022/ECal_Calib7.cfg
 SAC       config/2022/SAC.cfg
 ETag      config/2022/ETag.cfg
 PVeto	  config/2022/PVeto.cfg
