Adding global energy scales for data and MC.

--- a/PadmeReco/config/2022/ECal_Calib8.cfg
+++ b/PadmeReco/config/2022/ECal_Calib8.cfg
@@ -82,6 +82,8 @@ Analog          0 #Save ECal analog signals only if Debug mode is enabled
 [EnergyCalibration]
 #UseCalibration = 0 or >0; either calibration is used or not 
 UseCalibration 2
+HitGlobalScaleMC 0.98
+HitGlobalScaleData 0.86
 AveragepCMeV   15.0
 #CalibVersion = 0 => time dependent choice of the calibration constants; otherwise a specific calibration file is used 
 CalibVersion   7
