TP and Eff weights updated

--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -7,3 +7,5 @@ Triggers ALL
 
 [ECAL]
 Temp_File config/ECal_Temperature_01.dat
+EfficiencyMC_File  /data9Vd1/padme/dimeco/TagAndProbeOut/DATAout/FitsliceOut_newreco_sm_glob_18_rightTime.root
+EfficiencyDATA_File  /data9Vd1/padme/dimeco/TagAndProbeOut/DATAout/FitsliceOut_full_18.0.root
