PadmeReco: modified ECal reconstruction for MC and added run-dependant calibration

--- a/PadmeReco/config.template/2022/ECal_Calib8.cfg
+++ b/PadmeReco/config.template/2022/ECal_Calib8.cfg
@@ -53,8 +53,11 @@ UseIntegralCorrection           1
 UseSaturationCorrection         1
 BunchStructureSAC_runJuly       0
 UseZeroSuppression              5
-SmearMCHitEnResolution          0
-SmearMCHitTimeResolution        0
+SmearMCHitEnResolution          1
+HitEnergyResolutionNPE          200.
+HitEnergyResolutionPEDSigma     0.3
+SmearMCHitTimeResolution        1
+HitTimeResolutionSmearC         0.9
 MHTemplateFile                  config/BGOwaveformTemplate.txt
 
 ### for data - on l0padme3
@@ -63,6 +66,7 @@ ClusterDeltaTimeMax            6.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  15.
+CompensateMissingE             1
 ClusterTLowForHit              -500.
 ClusterTHighForHit              500.
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
@@ -71,8 +75,11 @@ PedestalMode                    0
 ClusterizationAlgo    1
 #Timing algorithm     0 [Weighted average],  1 [Time of the SEED]
 ClusterTimeAlgo	      1
-### extra smearing of cluster energy - to be used only for MC - just for specific tests => default 0
-###SmearMCClusterEnergyResolution 0 .... to be removed
+### extra smearing of cluster energy acting only on MC, default 1
+SmearMCClusterEnergyResolution 1
+EnergyResolutionSmearA 0.02
+EnergyResolutionSmearB 0.00003
+EnergyResolutionSmearC 0.012
 
 [Output]
 Hits            1
@@ -82,6 +89,9 @@ Analog          0 #Save ECal analog signals only if Debug mode is enabled
 [EnergyCalibration]
 #UseCalibration = 0 or >0; either calibration is used or not
 UseCalibration 2
+OverrideEScale 0
+HitGlobalScaleOverrideData 0.86
+HitGlobalScaleMC 0.98
 AveragepCMeV   15.0
 #CalibVersion = 0 => time dependent choice of the calibration constants; otherwise a specific calibration file is used
 CalibVersion   7
