--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -7,5 +7,6 @@ Triggers ALL
 
 [ECAL]
 Temp_File config/ECal_Temperature_01.dat
-EfficiencyMC_File  /data9Vd1/padme/dimeco/TagAndProbeOut/DATAout/FitsliceOut_newreco_sm_glob_18_rightTime.root
-EfficiencyDATA_File  /data9Vd1/padme/dimeco/TagAndProbeOut/DATAout/FitsliceOut_full_18.0.root
+ApplyEfficiencyCorrection  0
+EffCorrectionPath /data9Vd1/padme/dimeco/TagAndProbeOut/DATAout/ #mind the / when writing the path
+AddNoTargetToMC 0
