Added pol0 fit for EhitOverPOT and DataQuality flag from cfg file

--- a/UserAnalysis/config/UserAnalysis.conf
+++ b/UserAnalysis/config/UserAnalysis.conf
@@ -4,6 +4,7 @@
 #Triggers COSMICS
 #Triggers COSMICS DUALTIMER CORRELATED
 Triggers ALL
+DataQualityLevel 0 #0 evaluates good periods, 1 applies DataQuality cuts
 
 [ECAL]
 Temp_File config/ECal_Temperature_01.dat
