Fix tf libraries linking

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -13,9 +13,11 @@ ISSLC6 = $(shell cat /etc/redhat-release |grep -ic "Scientific Linux CERN SLC re
 CPPFLAGS += $(addprefix -I,$(addsuffix /include,$(SUBDIRS)))
 #CPPFLAGS += -IEventDisplay/include -IService/include
 CPPFLAGS += -IRecoBase/include -g
-CPPFLAGS += -I/home/kalina/software/include
+#CPPFLAGS += -I/home/kalina/software/include
+#CPPFLAGS += -I/home/kalina/.local/lib/python3.9/site-packages/tensorflow/include
 
 include ./mkconfig/global.gmk
+
 
 # Define libraries used for the creation of the final executable
 LIBS += -Llib -lPadmeReco$(STATIC) 
@@ -25,8 +27,6 @@ LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 #LIBS += -L/usr/lib64/mysql -lmysqlclient
 LIBS += -Llib -lPadmeReco$(STATIC)
-LIBS += -L/home/kalina/software/lib -ltensorflow
-
 
 #EXTRALIBS += -LEventDisplay/lib -lEventDisplay$(STATIC) -lEve -lGeom -lRGL -lFTGL -lGui -lGed -lTreePlayer -lEG 
 
