--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -13,8 +13,8 @@ ISSLC6 = $(shell cat /etc/redhat-release |grep -ic "Scientific Linux CERN SLC re
 CPPFLAGS += $(addprefix -I,$(addsuffix /include,$(SUBDIRS)))
 #CPPFLAGS += -IEventDisplay/include -IService/include
 CPPFLAGS += -IRecoBase/include -g
-#CPPFLAGS += -I/home/kalina/software/include
-#CPPFLAGS += -I/home/kalina/.local/lib/python3.9/site-packages/tensorflow/include
+CPPFLAGS += -I/home/kalina/software/include
+CPPFLAGS += -I/home/kalina/.local/lib/python3.9/site-packages/tensorflow/include
 
 include ./mkconfig/global.gmk
 
@@ -27,6 +27,9 @@ LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 #LIBS += -L/usr/lib64/mysql -lmysqlclient
 LIBS += -Llib -lPadmeReco$(STATIC)
+LIBS += -L/home/kalina/.local/lib/python3.9/site-packages/tensorflow -ltensorflow_cc
+LIBS += -L/home/kalina/.local/lib/python3.9/site-packages/tensorflow -ltensorflow_framework
+
 
 #EXTRALIBS += -LEventDisplay/lib -lEventDisplay$(STATIC) -lEve -lGeom -lRGL -lFTGL -lGui -lGed -lTreePlayer -lEG 
 
