Statistical analysis code update

--- a/X17Padme/input.conf
+++ b/X17Padme/input.conf
@@ -1,18 +1,28 @@
 # parameters for the run
 # Step in log coupling
-DeltaLogCoupling= 0.1
+DeltaLogCoupling= 1
 # Number of toys to run. Give 2 numbers in case you run for expectation
-NbToys= 10
+NbToys= 1 1
 # number of Channels ie Scan points
 nChannel= 5
 # RunType can be: 0 (a lot of debuging), 1 (standard exclusion), 2 (toys of toys for expected band)
-RunType= 0
+RunType= 2
 # StatisticsType can be: 0 (L_{S+B}/L_{B}, Tevatron), 1 (\tilde{q}_mu, LHC), 2 (L_{S+B}, CL_{SB})
 StatisticsType= 2
-# Pseudo-experiment politics: 0 (toss everything: pot, bkg etc), 1 (fix pot and bkg and fit the others)
+# Pseudo-experiment politics: 0 (toss everything: global and local nuisance), 1 (fix global nuisance and fit the others)
 TossingPolitics= 0
 # Confidence level. Used only for RunType 2
 ConfLevel= 0.9
-# mass points. To put many, copy line and change value.
-# MassPoints= 411.
+# mass points - to put many, copy line and change mass value
+MassPoints= 16.4
+# MassPoints= 16.5
+# MassPoints= 16.6
+# MassPoints= 16.7
+# MassPoints= 16.8
+# MassPoints= 16.9
+# MassPoints= 17.
+# MassPoints= 17.1
+# MassPoints= 17.2
+# MassPoints= 17.3
+# MassPoints= 17.4
 
